Bug 167446 - UI-less VT dialogs
Summary: UI-less VT dialogs
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:26.2.0
Keywords:
: 167451 (view as bug list)
Depends on:
Blocks: Vertical-Tab-dialogs
  Show dependency treegraph
 
Reported: 2025-07-10 07:36 UTC by Heiko Tietze
Modified: 2025-09-04 17:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2025-07-10 07:36:59 UTC
So far tabbed dialogs were designed with a GtkBox including image and label as tab widget. This has some flaws and was replaced by ui-less tabs, ie. created per code. The patch 05919359717b8b7b2fff6ad73088d34ee397e297 works fine yet might have some follow-up issues. Namely the previous tab configuration crashes with the option to show tabs horizontally (bug 167108) and in some cases the "Tab Page ID '' not known" which leads to empty tabs. Might be unrelated as the internal tab string is being harmonized as well (for example "labelTP_PARA_STD" -> "indents").
Comment 1 Heiko Tietze 2025-07-10 13:13:32 UTC
*** Bug 167451 has been marked as a duplicate of this bug. ***
Comment 2 Commit Notification 2025-08-02 07:17:14 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/187d7a2cc0990df7db109a64a05016530349d0a1

Related tdf#167446 - UI-less tab style (Style dialogs)

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-08-05 11:09:00 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/83ccb2bba3fdbdd0b0ec3c2ca6609b5a11c36aee

Related tdf#167446 - UI-less tab style (Writer formatting)

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-08-06 05:28:23 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ea8342a9a51e170365dc01520adbf439e0f32de0

Related tdf#167446 - UI-less tab style (Calc formatting)

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-08-06 09:13:48 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aa4fc14b677cf0d9e57bd816a13fc2d7ef84d54d

Related tdf#167446 - UI-less tab style (Draw/Impress format)

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-08-06 11:19:05 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ca6511135864a6d195c31f517e87be9baa16052b

Related tdf#167446 - UI-less tab style (cui)

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-08-06 13:37:26 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/21faff90e7ad62c90eb2ea6e5d07ac336d850b63

Related tdf#167446 - UI-less tab style (reportdesign)

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-09-04 17:04:52 UTC
Ilmari Lauhakangas committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3e49b01d49aab76cd7b7a9c0e93a850385528b17

tdf#167446 Fix Unordered and Ordered list entries in Bullets and

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.