Related tdf#167446 - UI-less tab style (Calc formatting)

Change-Id: I733a120a82e1090d3ec323c355e0d10d5347febb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187537
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>